--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-babel": "^7.0.1",
     "gulp-clean-css": "^3.9.4",
     "gulp-concat": "^2.6.1",
+    "gulp-plumber": "^1.2.1",
     "gulp-sass": "^4.0.1",
     "gulp-size": "^3.0.0",
     "gulp-uglify": "^3.0.0"
